<resources>
    <string name="app_name">wth</string>
    <string name="username">Login</string>
    <string name="prompt_password">Password</string>
    <string name="wht">WTH</string>
    <string name="btn_sign_in">Вход</string>
    <string name="btn_register">Регистрация</string>
    <string name="hello_world">Hello Round World!</string>
    <string name="prompt_wallet">Wallet</string>
    <string name="error">Error</string>
    <string name="target_number">Target Number</string>
    <string name="job">Job</string>
    <string name="text_label_1">label 1</string>
    <string name="text_label_2">label 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_content_desc">fab_string</string>
    <string name="target_count">target_count</string>
    <string name="target_price">target price</string>
    <string name="create_task">create task</string>
</resources>